--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
   --themeDodgerBlue: #0099ff;
   --themeDodgerBlueDark: #0561e2;
   --themeMithrilSilver: #bcbcbf;
+  --themeGray: rgb(166 173 183/1);
 }
 
 @font-face {
@@ -45,10 +46,17 @@ body {
   height: 100%;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 #firstFoldContainer {
   width: 100%;
   height: 100vh;
   background-color: var(--themeDark);
+  display: flex;
+  flex-direction: column;
+  position: relative;
 }
 
 #navigationContainer {
@@ -60,20 +68,28 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+
+  position: relative;
+  z-index: 2;
 }
 
 #mainFirstFoldContainer {
   height: 88vh;
   width: 100%;
-  /* background-color: pink; */
+  margin-top: 8rem;
+}
+
+#mainFirstFoldContainer > div {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* justify-content: center; */
-
-  margin-top: 7rem;
+  justify-content: center;
 
   background-image: url("./images/grid.svg");
+  background-repeat: no-repeat;
+  background-color: pink;
+  background-position: center center;
 }
 
 #navigationContainer nav {
@@ -158,6 +174,13 @@ body {
 
 #navGlobeIcon {
   width: 3rem;
+}
+
+#headingTextContainer,
+#ctaContainer {
+  background-color: darkblue;
+  position: relative;
+  z-index: 3;
 }
 
 #headingTextContainer h1,
@@ -295,4 +318,96 @@ body {
 .thirdRow-sixthPair,
 .thirdRow-seventhPair {
   opacity: 0;
+}
+
+#columnsCtn {
+  position: absolute;
+  top: 10vh;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 90vh;
+
+  display: flex;
+}
+
+#firstColumn {
+  width: 33.33%;
+  height: 100%;
+  /* background-color: red; */
+  border: 1px solid red;
+  position: relative;
+  z-index: 2;
+}
+
+#secondColumn {
+  width: 33.33%;
+  height: 100%;
+  /* background-color: yellow; */
+  border: 1px solid yellow;
+  position: relative;
+  z-index: 2;
+}
+
+#thirdColumn {
+  width: 33.33%;
+  height: 100%;
+  /* background-color: #0099ff; */
+  border: 1px solid #0099ff;
+  position: relative;
+  z-index: 2;
+}
+
+#followCursor {
+  width: 13.25rem;
+  height: 13.25rem;
+  position: absolute;
+  top: 0;
+  cursor: pointer;
+
+  /* background-color: orange; */
+  opacity: 0;
+
+  z-index: 1;
+}
+
+#cursorInfo {
+  position: absolute;
+  width: 6.75rem;
+  height: 4.062rem;
+  background-color: rgb(18 19 22 / 1);
+  border: 0.8px solid #fff;
+  left: 75%;
+  top: 60%;
+  border-radius: 1rem;
+  font-family: PlusJakartaSans-Medium;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+  color: var(--themeWhite);
+}
+
+#followCursor img {
+  width: 100%;
+  height: 100%;
+}
+
+#secondFoldContainer {
+  width: 100%;
+  height: 20rem;
+  background-color: red;
+}
+
+#cursorInfoLineOne {
+  font-size: 1.25rem;
+  font-weight: 600;
+}
+
+#cursorInfoLineTwo {
+  font-size: 11px;
+  color: var(--themeGray);
 }
