--- a/style.css
+++ b/style.css
@@ -96,13 +96,9 @@ body {
 #navigationContainer {
   width: 100%;
   height: 12vh;
-  /* background-color: red; */
-  /* border: 1px solid red; */
-
   display: flex;
   justify-content: center;
   align-items: center;
-
   position: relative;
   z-index: 5;
 }
@@ -119,10 +115,8 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-
   background-image: url("./images/grid.svg");
   background-repeat: no-repeat;
-  /* background-color: pink; */
   background-position: center center;
 }
 
@@ -188,11 +182,6 @@ body {
 
 .globeNav:hover #dropdown {
   display: block;
-}
-
-.globeNav {
-  /* height: 90%; */
-  /* background-color: red; */
 }
 
 .navText {
@@ -273,7 +262,6 @@ body {
 
 #headingTextContainer,
 #ctaContainer {
-  /* background-color: darkblue; */
   position: relative;
   z-index: 3;
 }
@@ -283,11 +271,6 @@ body {
 #ctaButton {
   opacity: 0;
 }
-
-/* #ctaButtonText,
-#ctaButton svg {
-  opacity: 0;
-} */
 
 #headingTextContainer h1,
 #ctaContainer h2 {
@@ -303,13 +286,10 @@ body {
 #textRevealEffectContainer {
   text-transform: uppercase;
   font-family: PlusJakartaSans-Bold;
-
   display: flex;
   justify-content: center;
   gap: 1.5rem;
-
   height: 7.5rem;
-  /* background-color: red; */
   overflow: hidden;
 }
 
@@ -352,7 +332,6 @@ body {
   max-width: 40.125rem;
   padding: 7.187rem 3.5rem 0 3.5rem;
   text-align: center;
-
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -379,17 +358,26 @@ body {
     #016fd0 4.61%,
     #03357c 162.29%
   ) !important;
-
-  /* width: max-content; */
   padding: 1.25rem 1.75rem;
   border-radius: 50rem;
   overflow: hidden;
+  cursor: pointer;
+  border: 1px solid #000;
 }
 
 #ctaButton a > div {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+#ctaButton:hover {
+  background-image: linear-gradient(
+    to right,
+    #016fd0,
+    #044aad,
+    #03357c
+  ) !important;
 }
 
 .ctaButtonText {
@@ -423,15 +411,12 @@ body {
   bottom: 0;
   width: 100%;
   height: 90vh;
-
   display: flex;
 }
 
 #firstColumn {
   width: 33.33%;
   height: 100%;
-  /* background-color: red; */
-  /* border: 1px solid red; */
   position: relative;
   z-index: 2;
 }
@@ -439,8 +424,6 @@ body {
 #secondColumn {
   width: 33.33%;
   height: 100%;
-  /* background-color: yellow; */
-  /* border: 1px solid yellow; */
   position: relative;
   z-index: 2;
 }
@@ -448,8 +431,6 @@ body {
 #thirdColumn {
   width: 33.33%;
   height: 100%;
-  /* background-color: #0099ff; */
-  /* border: 1px solid #0099ff; */
   position: relative;
   z-index: 2;
 }
@@ -460,10 +441,7 @@ body {
   position: absolute;
   top: 0;
   cursor: pointer;
-
-  /* background-color: orange; */
   opacity: 0;
-
   z-index: 1;
 }
 
@@ -477,7 +455,6 @@ body {
   top: 60%;
   border-radius: 1rem;
   font-family: PlusJakartaSans-Medium;
-
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -508,10 +485,6 @@ body {
 }
 
 /* marquee logic */
-.scroller {
-  /* max-width: 600px; */
-}
-
 .scroller__inner {
   padding-block: 1rem;
   display: flex;
@@ -670,7 +643,6 @@ body {
   #navigationContainer nav {
     max-width: 32rem;
     padding: 0.75rem 1.25rem;
-    /* background-color: red; */
     height: 74%;
   }
 
@@ -694,7 +666,6 @@ body {
     outline: none;
     border: none;
     width: 2.5rem;
-    /* height: 2.5rem; */
     padding: 0.5rem;
   }
 
@@ -756,7 +727,6 @@ body {
 
   .mobileNavigation {
     width: 100%;
-    /* height: 20rem; */
     background-color: var(--themeAliceBlueLight);
     position: absolute;
     top: 4.9rem;
